Added rough list of used techs to chapter 2

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -109,7 +109,7 @@ headsepline, % Uncomment to get a line under the header
 \hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
 %  \hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
 % \hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
-\hypersetup{linkcolor=black}fta
+\hypersetup{linkcolor=black}
 }
 
 \begin{document}
@@ -139,7 +139,7 @@ headsepline, % Uncomment to get a line under the header
 
 		% \begin{minipage}[t]{0.4\textwidth}
 		% \begin{flushleft} \large
-		\emph{Mitwirkender:}\\[0.3cm]
+		\emph{Autor :}\\[0.3cm]
 		{Lukas Vogrinc}\\ % Author name - remove the \href bracket to remove the link
 		{- 77871 -}\\[0.2cm]
 		% \end{flushleft}
@@ -230,12 +230,12 @@ headsepline, % Uncomment to get a line under the header
 %	ABBREVIATIONS
 %----------------------------------------------------------------------------------------
 
-% \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
+\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-% \textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-% \textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
+\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
+\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
 
-% \end{abbreviations}
+\end{abbreviations}
 
 %----------------------------------------------------------------------------------------
 %	PHYSICAL CONSTANTS/OTHER DEFINITIONS
